# coroutine_example

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  common.cmake  config.json  coroutine_example.code-workspace  coroutine_example.cppcheck
article/: C++20協程二八之旅01：由asio的異步回調講起.md
asio/: CMakeLists.txt
asio/include/: asio_lite.h  asio_lite.hpp  on_exit.h  on_exit.hpp  task.hpp  time.hpp  time_count.h  time_count.hpp
asio/src/: asio_callback.cpp  asio_callback.ixx  asio_cobalt.cpp  asio_cobalt.ixx  asio_context_fiber.cpp  asio_context_fiber.ixx  asio_continuatioin.cpp  asio_continuatioin.ixx  asio_coroutine2.cpp  asio_coroutine2.ixx  asio_fiber.cpp  asio_fiber.ixx  asio_lite.cpp  asio_std_coroutine.cpp  asio_std_coroutine.ixx  asio_strand.cpp  asio_strand.ixx  asio_switch.cpp  asio_switch.ixx  catch2.h  on_exit.cpp  spdlog.h  time_count.cpp  use_module.h
callback/: CMakeLists.txt
callback/include/: callback.h  common.h  data.hpp
callback/src/: callback_client.cpp  callback_server.cpp  client.cpp  common.cpp  server.cpp  simple.cpp
cmake/: common.cmake
context/: CMakeLists.txt
context/src/: callcc.cpp
coroutine2/: CMakeLists.txt
coroutine2/src/: coro2.cpp  coroutine2_server.cpp  server.cpp
include/: asio_common.hpp  connection.h  coro.hpp  json.hpp  log.hpp
module/: CMakeLists.txt
module/asio/: CMakeLists.txt  asio.ixx
module/boost.asio/: CMakeLists.txt  boost.asio.ixx
module/boost.context/: CMakeLists.txt  boost.context.ixx
module/boost.coroutine2/: CMakeLists.txt  boost.coroutine2.ixx
module/boost.fiber/: CMakeLists.txt  boost.fiber.ixx
module/spdlog/: CMakeLists.txt
module/src/: asio_module_example.ixx  boost.asio.example.ixx
src/: client.cpp  client.cppm  coro2.cpp  coro2.cppm  coro_std.cpp  main.cpp  server.cpp  server.cppm  std_coro.cpp  test.cpp
src/client/: callback.cpp  switch.cpp
src/server/: callback.cpp  switch.cpp
switch/: CMakeLists.txt
switch/include/: common.h
switch/src/: server.cpp  simple.cpp  switch_server.cpp  switch_server.ixx
tests/: CMakeLists.txt
tests/src/: io_scheduler.ixx  shared_api.h  spdlog.hpp  stdcoro.ixx  test.cpp  test_callback.cpp  test_callback.ixx  test_cobalt.cpp  test_cobalt.ixx  test_context_continuation.cpp  test_context_continuation.ixx  test_context_fiber.cpp  test_context_fiber.ixx  test_continuation.cpp  test_continuation.ixx  test_coroutine2.cpp  test_coroutine2.ixx  test_fiber.cpp  test_fiber.ixx  test_std_coroutine.cpp  test_std_coroutine.ixx  test_stdexec.cpp  test_stdexec.ixx  test_switch.cpp  test_switch.ixx  test_switch_coro.cpp  test_switch_coro.ixx  test_use_awaitable.cpp  test_use_awaitable.ixx
tests/src/fiber/asio/: autoecho.cpp  round_robin.hpp
tests/src/fiber/asio/ps/: publisher.cpp  subscriber.cpp
tests/src/main/: test_callback_main.cpp  test_cobalt_main.cpp  test_context_continuation_main.cpp  test_context_fiber_main.cpp  test_coroutine2_main.cpp  test_fiber_main.cpp  test_std_coroutine_main.cpp  test_stdexec_main.cpp  test_switch_coro_main.cpp  test_use_awaitable_main.cpp
